src/public/css/front.css
/* ... */
@keyframes animateStars {
	from {
		transform: translateY(0px);
	}
	to {
		transform: translateY(-100vh);
	}
}

main #roomWrapper {
	flex-direction: column;
	z-index: 50;
	width: 100%;
	height: 100%;
	padding: 50px 0 50px 0;
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: center;
}

main #roomWrapper #roomSelection {
	display: flex;
	align-items: center;
	flex-direction: column;
}

main #roomWrapper #roomSelection #roomSearch {
	width: 300px;
	position: relative;
	display: inline-block;
}

main #roomWrapper #roomSelection #roomSearch label {
	z-index: 9;
	position: absolute;
	left: 25px;
	display: block;
	font-family: "Open Sans", sans-serif;
	font-size: 2.8em;
	color: var(--colorGray);
}

main #roomWrapper #roomSelection #roomSearch #roomSearchId {
	width: 300px;
	margin: 5px;
	padding: 10px 20px 10px 55px;
	display: inline-block;
	font-size: 1.8em;
	text-align: left;
	text-transform: uppercase;
	color: var(--colorBlack);
	border-radius: 50px;
	border: none;
	box-sizing: border-box;
	box-shadow: 0 0 100px #000000;
	cursor: pointer;
	transition: all 0.5s;
}

main #roomWrapper #roomSelection #roomCreateButton {
	width: 300px;
	margin: 5px;
	padding: 10px 20px 10px 15px;
	display: inline-block;
	font-family: "Open Sans", sans-serif;
	font-size: 1.8em;
	text-align: center;
	background-color: #2196F3;
	color: #FFFFFF;
	border: none;
	border-radius: 50px;
	box-shadow: 0 0 100px #000000;
	transition: all 0.5s;
}

main #roomWrapper #roomSelection #roomCreateButton span {
	position: relative;
	display: inline-block;
	transition: 0.5s;
	cursor: pointer;
}

main #roomWrapper #roomSelection #roomCreateButton span:after {
	opacity: 0;
	margin-left: -20px;
	position: absolute;
	top: -1px;
	left: -20px;
	transition: 0.5s;
	content: "🐟";
}

main #roomWrapper #roomSelection #roomCreateButton:hover span {
	padding-left: 30px;
}

main #roomWrapper #roomSelection #roomCreateButton:hover span:after {
	opacity: 1;
	left: 0;
}

main #roomWrapper #roomSelection #roomCreateLabel {
	font-size: 1.12em;
	text-shadow: 1px 1px 2px black;
	visibility: hidden;
}

main #roomWrapper #lastRooms {
	display: flex;
	align-items: center;
	flex-direction: column;
	visibility: hidden;
}

main #roomWrapper #lastRooms #lastRoomsList {
	margin: 0;
	padding: 0;
	font-size: 1.5em;
	list-style-type: none;
}

main #roomWrapper #lastRooms #lastRoomsList li {
	width: 220px;
	margin-bottom: 15px;
	padding: 10px 5px 10px 20px;
	display: flex;
	border-radius: 25px;
	background-color: #FFFFFF;
}

main #roomWrapper #lastRooms #lastRoomsList li:hover {
	background-color: #EEEEEE;
}

main #roomWrapper #lastRooms #lastRoomsList li a {
	width: calc(85% - 5px);
	line-height: 35px;
	display: inline-block;
	color: #000000;
}

main #roomWrapper #lastRooms #lastRoomsList li .removeRoom {
	width: calc(15% + 5px);
	height: 100%;
	line-height: 35px;
	display: inline-block;
	text-align: center;
	color: #555555;
	border-left: 1px solid #000000;
	cursor: pointer;
}

footer {
	z-index: 100;
	width: 100%;
	height: 140px;
	padding: 20px 40px 20px 40px;
	position: relative;
	display: flex;
	align-items: center;
	font-family: "Open Sans", sans-serif;
	font-size: 0.9em;
	background-color: var(--colorElement);
	box-sizing: border-box;
}

footer #logoImage {
	width: 80px;
	height: auto;
	display: block;
}

footer #contact {
	display: block;
	list-style-type: none;
}

